Add start to fragmentation script

--- a/scripts/4_biodiversity_dev.Rmd
+++ b/scripts/4_biodiversity_dev.Rmd
@@ -9,6 +9,11 @@ editor_options:
 source("scripts/0_start.R")
 ```
 
+```{r pnv}
+
+```
+
+
 ```{r RS-AOH-tester}
 library(sf)
 AOH <- st_read("/Users/christophercrawford/Google Drive/_Projects/data/Bd/AOH/reptilia_AOH/reptilia.shp")
