--- a/scripts/3_analysis.Rmd
+++ b/scripts/3_analysis.Rmd
@@ -3,17 +3,22 @@ title: "R Notebook"
 output: html_notebook
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd+Shift+Enter*. 
-
+# Fragmentation analysis
+Using the R package `landscapemetrics`, 
 ```{r}
-plot(cars)
+install.packages("landscapemetrics")
+library(landscapemetrics)
+
+citation("landscapemetrics")
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
+```{r load-rasters}
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Cmd+Shift+K* to preview the HTML file). 
+```
 
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+`landscapemetrics` works only with rasters with cell resolutions in terms of meters.
+```{r}
+
+check_raster()
+```
 
