Add PNV exploration

--- a/scripts/3.1_figures.Rmd
+++ b/scripts/3.1_figures.Rmd
@@ -6,9 +6,11 @@ editor_options:
 ---
 
 ```{r initialize}
-getwd()
 source("scripts/0_start.R")
-env_size(ls())
+```
+
+```{r basemaps}
+source("")
 ```
 
 
